# protlms

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-image.yaml  python-publish.yaml
01/5b50fb470f/: metadata.json
01/5b50fb470f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
03/507ae44e8c/: metadata.json
03/507ae44e8c/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
05/7d76729d2b/: metadata.json
05/7d76729d2b/0/: content_hash.txt  full.jsonl  metadata.json
0c/9bd8428ea3/: metadata.json
0c/9bd8428ea3/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
0e/0bc39b41fb/: metadata.json
0e/0bc39b41fb/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt  transcript.jsonl
0e/eee2fe3079/: metadata.json
0e/eee2fe3079/0/: content_hash.txt  metadata.json  prompt.txt
19/855f96b63c/: metadata.json
19/855f96b63c/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt  transcript.jsonl
1f/04d3695676/: metadata.json
1f/04d3695676/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
25/e4669bfdc7/: metadata.json
25/e4669bfdc7/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
26/0f1c0b6beb/: metadata.json
26/0f1c0b6beb/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt  transcript.jsonl
27/78698a6293/: metadata.json
27/78698a6293/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
27/a29099e275/: metadata.json
27/a29099e275/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
28/82a9b68f6a/: metadata.json
28/82a9b68f6a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
29/2e9b04acc9/: metadata.json
29/2e9b04acc9/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2f/cefd2d535c/: metadata.json
2f/cefd2d535c/0/: content_hash.txt  (+3 more)
31/71bfb34c8e/: metadata.json
32/1078247d3c/: metadata.json
34/ed43b41010/: metadata.json
38/10371692f7/: metadata.json
3c/785955774a/: metadata.json
41/56a6c53061/: metadata.json
41/778ba7cbee/: metadata.json
45/f11ae6de25/: metadata.json
46/28401950a8/: metadata.json
4c/74a1b78f8e/: metadata.json
4e/14e6706675/: metadata.json
51/870f82a02d/: metadata.json
56/cb6724934c/: metadata.json
59/9953d76ab4/: metadata.json
6d/12da67e59d/: metadata.json
72/d2783378a0/: metadata.json
72/f09b10345c/: metadata.json
7b/ab6bb6274e/: metadata.json
80/4f1297071a/: metadata.json
86/ca525f9845/: metadata.json
90/9c7c81cd83/: metadata.json
9a/61e076431b/: metadata.json
9a/e1769b1dcc/: metadata.json
9b/be70d72b48/: metadata.json
a3/4c3e99bae0/: metadata.json
ac/d60f6b2461/: metadata.json
ae/bcc95fb64c/: metadata.json
b0/fc664b83cf/: metadata.json
b1/401a21c5d3/: metadata.json
bf/c30df8adec/: metadata.json
c5/c3d0d05edc/: metadata.json
c5/e1f75981f3/: metadata.json
c7/d0ec5220af/: metadata.json
c8/d45ee2c69d/: metadata.json
containers/e1/: Dockerfile  README.md  docker-entrypoint.sh  entrypoint.py
containers/esm/: Dockerfile  README.md  entrypoint.py
containers/esm-c/: Dockerfile  README.md  docker-entrypoint.sh  entrypoint.py
containers/esm2/: Dockerfile  README.md  entrypoint.py
containers/progen2/: Dockerfile  README.md  entrypoint.py
containers/protbert/: Dockerfile  README.md  entrypoint.py
db/7f87db1db1/: metadata.json
df/53a0a230ab/: metadata.json
docs/: CONTRACT.md  VISION.md
e3/211db88497/: metadata.json
e5/3a32942a88/: metadata.json
e9/4b93015aee/: metadata.json
f7/aa929d0725/: metadata.json
fb/0c2231db89/: metadata.json
fe/495ff31659/: metadata.json
ff/46056ee28d/: metadata.json
scripts/: registry_publish.py
src/plms/: __init__.py  chunking.py  cli.py  contract.py  exceptions.py  io.py  models.py  registry.py  runner.py
src/protlms/: __init__.py  chunking.py  cli.py  contract.py  exceptions.py  io.py  models.py  registry.py  runner.py
tests/: test_chunking.py  test_cli.py  test_contract.py  test_e1_entrypoint.py  test_esm2_entrypoint.py  test_esm_entrypoint.py  test_esmc_entrypoint.py  test_eval_contacts.py  test_eval_runner.py  test_integration_chunking.py  test_integration_e1.py  test_integration_esm.py  test_integration_esm2.py  test_integration_esmc.py  test_integration_ghcr.py  test_integration_progen2.py  test_integration_protbert.py  test_io.py  test_models.py  test_placeholder.py  test_progen2_entrypoint.py  test_protbert_entrypoint.py  test_registry.py  test_registry_publish.py  test_runner.py
tests/data/: manifest.example.json  prompts.fasta  result.contacts.example.json  result.embed.example.json  result.generate.example.json  result.score.example.json  tiny.fasta  variants.csv
(+189 files in other folders)
