[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plms"
version = "0.1.0"
description = "Unified toolkit for inference across a variety of protein language models (pLMs)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bryan Briney", email = "briney@scripps.edu" },
]
keywords = ["protein language models", "bioinformatics", "machine learning", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    # Command-line interface and rich terminal rendering.
    "typer>=0.12",
    "rich>=13.0",
    # Schemas for the container contract (manifest, result, errors).
    "pydantic>=2.7",
    # Model registry is a human-editable YAML file.
    "pyyaml>=6.0",
    # Only used to load result arrays (.npy/.npz) produced by containers.
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "ty>=0.0.40",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
plms = "plms.cli:main"

[project.urls]
Repository = "https://github.com/briney/plms"

# --- Tool Configuration ---
# Everything below configures dev tools. No separate config files needed.

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["plms"]

[tool.ruff.lint.per-file-ignores]
# Tests annotate fixtures with types (e.g. pathlib.Path) that are convenient to
# keep as plain runtime imports rather than moving into TYPE_CHECKING blocks.
"tests/*" = ["TC001", "TC002", "TC003"]
# chunking.py imports future task dependencies (merge, orchestration) in advance.
"src/plms/chunking.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: end-to-end tests that build and run Docker images (gated on docker availability).",
]

[tool.ty.environment]
# ty infers the Python version from `requires-python`; set explicitly for clarity.
python-version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/plms"]
